example/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              tracing:
                provider:
                  name: envoy.tracers.zipkin
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                    collector_cluster: zipkin
                    collector_endpoint: "/api/v2/spans"
                    collector_endpoint_version: HTTP_JSON
                    shared_span_context: false
                    trace_id_128bit: true
              http_filters:
              - name: envoy.filters.http.header_to_metadata
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
                  request_rules:
                  - header: x-skip-auth
                    on_header_present:
                      metadata_namespace: envoy.filters.http.header_to_metadata
                      key: x_skip_auth
                      type: STRING
                    remove: true
              - name: envoy.filters.http.golang
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                  library_id: gateway-auth
                  library_path: "/app/go-envoy-oauth.so"
                  plugin_name: gateway-auth
                  plugin_config:
                    "@type": type.googleapis.com/xds.type.v3.TypedStruct
                    value:
                      # OpenID Connect configuration
                      issuer_url: "https://idp.rashpile.net/auth/realms/test"
                      client_id: "envoy-proxy"
                      client_secret: "S3fE09t7RsbDnBK2Q7KLbQ7KYklegd5o"
                      redirect_url: "http://localhost:8080/oauth/callback"
                      scopes: ["openid", "profile", "email"]

                      # Session configuration
                      session_cookie_name: "session"
                      session_max_age: 86400  # 24 hours in seconds
                      session_path: "/"
                      session_domain: "localhost"
                      session_secure: false   # Set to false for HTTP testing
                      session_http_only: true
                      session_same_site: "Lax"
                      cookie_config: "HttpOnly; SameSite=Lax"  # Cookie configuration string
                      user_id_header_name: "X-User-ID"
                      user_email_header_name: "X-User-Email"
                      user_username_header_name: "X-User"
                      skip_auth_header_name: "X-Skip-Auth"  # Header to check for skipping auth

                      # Paths that should be excluded from authentication
                      # exclude_paths: ["/health", "/metrics", "/oauth/login", "/oauth/callback", "/oauth/logout"]

                      # Cluster-specific configurations
                      clusters:
                        echo_service_cluster:
                          exclude_paths: ["/status/200", "/status/201"]
                        admin_cluster:
                          exclude: true
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/ip"
                    route:
                      cluster: admin_cluster
                      host_rewrite_literal: httpbin.org
                  - match:
                      prefix: "/"
                    route:
                      cluster: echo_service_cluster
                      host_rewrite_literal: httpbin.org
  clusters:
    - name: echo_service_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: echo_service_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: httpbin.org
                  port_value: 443
      transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              sni: httpbin.org
    - name: admin_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: admin_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: httpbin.org
                  port_value: 443
      transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
              sni: httpbin.org
    - name: zipkin
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: zipkin
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: zipkin
                  port_value: 9411
